src/snapshots/raoul__tests__get_ast@hello-world.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/hello-world.ra
---
Main(([], [
    Write([String(Hello world!)]),
]))
