src/snapshots/raoul__tests__get_ast@invalid-cast.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/invalid-cast.ra
---
Main(([], [
    Assignment(false, Id(a), Unary(Not, String(2))),
]))
