src/snapshots/raoul__tests__get_ast@invalid-return.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/invalid-return.ra
---
Main(([], [
    Function(test, Int, [], [
        Return(Bool(false)),
    ]),
], [
    Assignment(false, Id(a), FunctionCall(test, [])),
    Write([Id(a)]),
]))
