src/snapshots/raoul__tests__get_ast@missing-return.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/missing-return.ra
---
Main(([
    Function(test, INT, [], [
        Assignment(false, Id(a), Integer(1)),
    ]),
], [
    Assignment(false, Id(a), FunctionCall(test, [])),
    Write([Id(a)]),
]))
