src/snapshots/raoul__tests__get_ast@not-boolish.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/not-boolish.ra
---
Main(([], [], [
    Decision(Float(1), [Write([String(Hi)])], None),
]))
