src/snapshots/raoul__tests__get_ast@primitive-index.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/primitive-index.ra
---
Main(([], [], [
    Assignment(false, Id(a), Integer(1)),
    Assignment(false, ArrayVal(a, Integer(1), None), Integer(2)),
    Write([Id(a)]),
]))
