src/snapshots/raoul__tests__get_ast@read.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/read.ra
---
Main(([], [
    Assignment(false, Id(a), Read),
    Write([Id(a)]),
]))
