src/snapshots/raoul__tests__get_ast@recursion.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/recursion.ra
---
Main(([], [
    Function(test, Void, [], [
        FunctionCall(test, []),
    ]),
], [
    FunctionCall(test, []),
]))
